Fix list item spacing issue by fixing the padding

--- a/Website/styles.css
+++ b/Website/styles.css
@@ -92,6 +92,10 @@ p,
     line-height: 1.85;
 }
 
+.super-text2 li {
+    padding: 1rem;
+}
+
 @media screen and (min-width: 1080px) {
 
     /* For laptop and desktop sizes */
